# AItelier

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.godot  Dockerfile.unity  LICENSE  README.md  _deletions.json  api.js  api_wiring_complete.json  debugctl.py  docker-compose.yml  fe_wiring_verify.json  fix_skillflow_lock.patch  linter_manifest.json  llm_providers.json  pyproject.toml  pytest.ini  step2_design.md
agent_configs/: code_review.yaml  coding_impl.yaml  coding_task.yaml  dpe_default.yaml  fix_tests.yaml  investigate.yaml  meta_conversation.yaml  novel_chapter.yaml  novel_init.yaml  pipeline_forge.yaml  skill_converter.yaml  subagent.yaml
aitelier/: lint_backends.py  novel_state.py  runner.py  skillflow_docs_lib.py  step_labels.py  stub_runner.py
api/: _cache_stats.py  admin_routers.py  agent_routers.py  auth.py  authz.py  config_routers.py  dependencies.py  main.py  meta_routers.py  project_routers.py  repo_routers.py  routers.py  run_routers.py  settings_routers.py  sse_manager.py
cli/: __main__.py  app.py  client.py  completer.py  keys.py  meta_store.py  server.py
configs/: code_review.yaml  coding_impl.yaml  coding_task.yaml  dpe_default.yaml  fix_tests.yaml  investigate.yaml  meta_conversation.yaml  novel_chapter.yaml  novel_init.yaml  pipeline_forge.yaml  subagent.yaml
core/: addon_registry.py  agents.py  ai_router.py  asset_registry.py  build_runner.py  cf_access.py  config_registry.py  datadir.py  db_manager.py  dpe_pipeline.py  event_bus.py  git_ops.py  interaction_meta.py  log_utils.py  meta_agent.py  meta_conversation.py  meta_run.py  orphan_dbg.py  pipeline_registry.py  project_submit.py  prompt_assembler.py  run_launcher.py  scheduler.py  security_jail.py  (+3 more)
(+300 files in other folders)
